https-passthrough/deploy/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: https-passthrough
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-passthrough
  namespace: https-passthrough
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-passthrough
  template:
    metadata:
      labels:
        app: https-passthrough
    spec:
      automountServiceAccountToken: false
      containers:
        - name: https-passthrough
          image: ghcr.io/vojtechmares/demo-apps/https-passthrough:latest
          ports:
            - name: https
              containerPort: 8443
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: https-passthrough-tls
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: https-passthrough-tls
          secret:
            secretName: https-passthrough-tls
---
apiVersion: v1
kind: Service
metadata:
  name: https-passthrough
  namespace: https-passthrough
spec:
  selector:
    app: https-passthrough
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-passthrough
  namespace: https-passthrough
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: https-passthrough.maresdemo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: https-passthrough
                port:
                  name: https
